--- a/preguntadort/Views/Home/Respuesta.cshtml
+++ b/preguntadort/Views/Home/Respuesta.cshtml
@@ -3,5 +3,6 @@
 }
 else{
     <p>MAL, es incorrecto</p>
-    <p>La respuesta era</p>
+    <p>La respuesta era "profe tengo una duda de como poner la respuestac correta"</p>
 }
+<a href='@Url.Action("Juego")'>Jugar</a>
