--- a/preguntadort/Views/Shared/_Layout.cshtml
+++ b/preguntadort/Views/Shared/_Layout.cshtml
@@ -8,15 +8,15 @@
     </head>
     <body>
         <header style="position:fixed; top: 0; margin: 10px 0px 20px 0px;">
-            Encabezado TP XX
+            <a href="Index.html" class="logo"> <img src="image\logo\1d.png" alt="logo" width="300px"><i class="fas fa-coffee"></a>
+            <nav>
+                <a href='@Url.Action("ConfigurarJuego")'>Jugar</a>
+            </nav>
         </header>
         <div style="padding:20px 10px 0px 10px;">
             @RenderBody()
         </div>
 
-        <footer>
-                &copy; @DateTime.Now.Year - Taller de Programación - TPXX
-        </footer>
         <script src="~/js/site.js" asp-append-version="true"></script>
         @await RenderSectionAsync("Scripts", required: false)
     </body>
