--- a/preguntadort/Views/Home/Respuesta.cshtml
+++ b/preguntadort/Views/Home/Respuesta.cshtml
@@ -3,6 +3,5 @@
 }
 else{
     <p>MAL, es incorrecto</p>
-    <p>La respuesta era "profe tengo una duda de como poner la respuestac correta"</p>
 }
-<a href='@Url.Action("Juego")'>Jugar</a>
+<a href='@Url.Action("Jugar")'>Jugar</a>
