--- a/preguntadort/Views/Home/Index.cshtml
+++ b/preguntadort/Views/Home/Index.cshtml
@@ -1,1 +1,24 @@
-﻿<a href='@Url.Action("ConfigurarJuego")'>Jugar</a>
+﻿<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>PreguntadORT</title>
+</head>
+
+<body class="background">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <div class="contenedor">
+        <img src="img/ppersonajePreguntados.webp" alt="personajePreguntados"><br>
+        <h1>PreguntadORT</h1>
+        
+        <a class="btn btn-primary" role="button" style=" width: 250px" href='@Url.Action("ConfigurarJuego")'>Jugar</a>
+    </div>
+</body>
+
+</html>
