--- a/preguntadort/Views/Home/ConfigurarJuego.cshtml
+++ b/preguntadort/Views/Home/ConfigurarJuego.cshtml
@@ -1,20 +1,49 @@
-<form action='@Url.Action("Comenzar")' method="get">
-    
-    <p>Username</p>
-    <label for="fname">Username</label><br>
-  <input type="text" name="username"><br>
-    
-    <p>Categoría</p>
-    @foreach (Categoria categoria in ViewBag.categorias)
-    {
-    <input type="radio" name="categoria" value = "@categoria.IdCategoria">
-    <label>@categoria.Nombre</label><br>
-    }
-    <p>Dificultad</p>
-    @foreach (Dificultad dificultad in ViewBag.dificultades)
-    {
-    <input type="radio" name="dificultad" value = "@dificultad.IdDificultad">
-    <label>@dificultad.Nombre</label><br>
-    }
-    <input type="submit" value="Jugar">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>PreguntadORT</title>
+</head>
+
+<body class="background">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+    <div class="contenedor_configurarJuego">
+        <form action='@Url.Action("Comenzar")' method="get">
+            <h1>PreguntadORT</h1>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Nombre de Usuario</label>
+                <input type="text" class="form-control" id="username" name = "username" aria-describedby="text" required>
+            </div> <br>
+            <h2>Dificultad</h2>
+            <div class="opciones">
+
+            @for(int i = 0; i < ViewBag.dificultades.Count; i++){
+                <input type="radio" class="btn-check" name="dificultad" id="op@(i)" autocomplete="off" value = "@ViewBag.dificultades[i].IdDificultad">
+                <label class="btn btn-outline-secondary" for="op@(i)">@ViewBag.dificultades[i].Nombre</label>
+            }
+            </div>
+
+            <h2>Categoría</h2>
+            <div class="opciones">
+
+            @for(int i = 0; i < ViewBag.categorias.Count; i++){
+                <input type="radio" class="btn-check" name="categoria" id="opt@(i)" autocomplete="off" value = "@ViewBag.categorias[i].IdCategoria">
+                <label class="btn btn-outline-secondary" for="opt@(i)">@ViewBag.categorias[i].Nombre</label>
+            }
+            </div>
+            <br><br>
+            
+          <input type="submit" class="btn btn-primary" value="Jugar" role="button" style=" width: 250px">
+          
+        </form>
+    </div>
+</body>
+
+</html>
