--- a/preguntadort/Views/Home/Fin.cshtml
+++ b/preguntadort/Views/Home/Fin.cshtml
@@ -1,3 +1,29 @@
 @ViewBag.username
-@ViewBag.puntajeActual
+
 <a href='@Url.Action("ConfigurarJuego")'>Jugar</a>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>PreguntadORT</title>
+</head>
+
+<body class="background">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <div class="contenedor-fin"><br><br><br>
+        <h1>¡Felicidades @ViewBag.username!</h1>
+        <h3>¡Tu puntaje final es @ViewBag.puntajeActual!</h3><br><br>
+        <img src="/img/todoslospersonajkes.png" alt="personajes"><br><br>
+
+        <a class="btn btn-primary" href='@Url.Action("ConfigurarJuego")' role="button" style=" width: 230px">Volver a Jugar</a><br>
+    </div>
+</body>
+
+</html>
