--- a/preguntadort/Views/Home/Jugar.cshtml
+++ b/preguntadort/Views/Home/Jugar.cshtml
@@ -1,17 +1,44 @@
-<div id="ten-countdown"></div>
+<!DOCTYPE html>
+<html lang="en">
 
-<p>@ViewBag.username</p>
-<p>@ViewBag.puntajeActual</p>
-<p>@ViewBag.pregunta.Enunciado</p>
-<p>@ViewBag.pregunta.foto</p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>PreguntadORT</title>
+</head>
 
-<form action='@Url.Action("VerificarRespuesta")' method="post">
+<body class="background">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <div class="contenedor-juego"><br><br><br>
+    <div id="ten-countdown"></div>
+        <h1>@ViewBag.pregunta.Enunciado</h1>
+        <img src="img/@ViewBag.pregunta.foto" alt="arcoiris"><br><br>
+        <div class="opciones">
+
+        <form action='@Url.Action("VerificarRespuesta")' method="post">
     
-    @foreach (Respuesta respuesta in ViewBag.respuestas)
-    {        
-    <input type="hidden" name = "idPregunta" value = "@respuesta.IdPregunta">
-    <input type="radio" name="idRespuesta" value = "@respuesta.IdRespuesta">
-    <label>@respuesta.contenido</label><br>
-    }
-    <input type="submit" value="Listo">
-</form>
+            @for(int i = 0; i < ViewBag.respuestas.Count; i++){
+                <input type="hidden" name = "idPregunta" value = "@ViewBag.respuestas[i].IdPregunta">
+                <input type="radio" class="btn-check" name="idRespuesta" id="opt@(i)" autocomplete="off" value = "@ViewBag.respuestas[i].IdRespuesta">
+                <label class="btn btn-outline-secondary" for="opt@(i)">@ViewBag.respuestas[i].contenido</label>
+            }
+            
+        <div class = "listo">
+            <input type="submit" class="btn btn-primary" role="button" style=" width: 10em" value="Listo"><br>
+        </div>
+
+        </form>
+        </div>
+        
+        <br><br>
+        <a class="btn btn-primary" href='@Url.Action("Index")' role="button" style=" width: 5em">Volver</a> <br>
+        
+        <h4>Usuario: @ViewBag.username</h4>
+        <h4>Puntos: @ViewBag.puntajeActual</h4>
+    </div>
+</body>
+
+</html>
