--- a/preguntadort/Views/Home/Respuesta.cshtml
+++ b/preguntadort/Views/Home/Respuesta.cshtml
@@ -1,7 +1,42 @@
-@if(ViewBag.correcta == true){
-    <p>Felicitaciones, es correcto</p>
-}
-else{
-    <p>MAL, es incorrecto</p>
-}
-<a href='@Url.Action("Jugar")'>Jugar</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>PreguntadORT</title>
+</head>
+
+<body class="background">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <div class="contenedor-juego"><br><br><br>
+        @if(ViewBag.correcta == true){
+             <h1>¡CORRECTO!</h1>
+        <h3>Felicitaciones, se te suman 5 puntos</h3>
+        <img src="/img/corona.png" alt="corona"><br><br>
+
+        
+        <a class="btn btn-primary" href='@Url.Action("Index")' role="button" style=" width: 5em">Volver</a> <br>
+        <a class="btn btn-primary" href='@Url.Action("Jugar")' role="button" style=" width: 10em">Siguiente</a><br>
+        <h4>Usuario: @ViewBag.username</h4>
+        <h4>Puntos: @ViewBag.puntajeActual</h4>
+        }
+        else{
+            <h1>¡INCORRECTO!</h1>
+        <h3>Que pena, la repsuesta era @ViewBag.respuestaCorrecta</h3>
+        <img src="/img/Hector.webp" alt="hetor"><br><br>
+
+        <a class="btn btn-primary" href='@Url.Action("Index")' role="button" style=" width: 5em">Volver</a> <br>
+        <a class="btn btn-primary" href='@Url.Action("Jugar")' role="button" style=" width: 10em">Siguiente</a><br>
+        <h4>Usuario: @ViewBag.username</h4>
+        <h4>Puntos: @ViewBag.puntajeActual</h4>
+        }
+    
+       
+    </div>
+</body>
+
+</html>
