--- a/preguntadort/wwwroot/css/site.css
+++ b/preguntadort/wwwroot/css/site.css
@@ -18,7 +18,7 @@ body {
 }
 
 .background {
-  background-image: url('\img\foto2.jpg');
+  background-image: url('/img/foto2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -145,6 +145,12 @@ a:active {
   border: none;
 }
 
+.contenedor_configurarJuego .aparte{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 /*JUEGO*/
 
